--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -15,4 +15,39 @@
 
 <ion-content padding>
 
+  <ion-card>
+    <ion-card-header color="primary">Our History</ion-card-header>
+    <ion-card-content>
+      <p>Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par excellence in Hong Kong. With its unique brand of world fusion cuisine that can be found nowhere else, it enjoys patronage from the A-list clientele in Hong Kong.  Featuring four of the best three-star Michelin chefs in the world, you never know what will arrive on your plate the next time you visit us.</p>
+
+      <p>The restaurant traces its humble beginnings to The Frying Pan, a successful chain started by our CEO, Mr. Peter Pan, that featured for the first time the world's best cuisines in a pan.</p>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card *ngIf="leaders" >
+    <ion-card-header color="primary">Corporate Leadership</ion-card-header>
+    <ion-list>
+      <ion-item-group *ngFor="let leader of leaders" class="ion-align-self-center">
+        <ion-item>
+          <ion-avatar item-start="">
+            <img src="{{BaseURL + leader.image}}" class="leaderimg">
+          </ion-avatar>
+          <h2 text-wrap="">{{leader.name}}</h2>
+          <h3 text-wrap="">{{leader.designation}}</h3>
+        </ion-item>
+        <ion-item>  
+          <p text-wrap="">{{leader.description}}</p>
+        </ion-item>
+      </ion-item-group>
+    </ion-list>
+  </ion-card>
+<div [hidden]="leaders || leaderErrMess">
+  <ion-spinner></ion-spinner>
+  <h4>Loading . . . Please Wait</h4>
+</div>
+<div *ngIf="leaderErrMess">
+  <h2>Error</h2>
+  <h4>{{leaderErrMess}}</h4>
+</div>
+
 </ion-content>
