--- a/src/pages/dishdetail/dishdetail.html
+++ b/src/pages/dishdetail/dishdetail.html
@@ -7,7 +7,13 @@
 <ion-header>
 
   <ion-navbar color="primary">
+
     <ion-title>Dish Details</ion-title>
+    <button end (click)="openActionSheet()">
+      <ion-icon color="primary" name="more"></ion-icon>
+    </button>
+    
+
   </ion-navbar>
 
 </ion-header>
@@ -70,4 +76,5 @@
     <ion-icon name="heart"></ion-icon>
   </button>
 </ion-fab>
+
 </ion-content>
