--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -30,6 +30,13 @@
         </ion-col>
       </ion-row>
     </ion-grid>
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <button ion-button small (click)="getFromLibrary()">Get From Library</button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-card>
   <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <ion-item>
